build: workflow dispatch

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,12 +1,12 @@
 name: Node.js Package
 
 on:
+  workflow_dispatch:
   release:
     types: [created]
 
 jobs:
   publish-gpr:
-    needs: build
     runs-on: ubuntu-latest
     permissions:
       packages: write
