--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "publishConfig": {
     "@jpbnetley:registry":"https://npm.pkg.github.com"
   },
-  "bin": {
-    "testExec": "bin/cliTest.js",
-    "@jpbnetley/test-npx": "npm run testExec"
-},
+  "bin": "bin/cliTest.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "testExec": "test"
