--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "@jpbnetley/test-npx",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "description": "write custom npx commands",
   "main": "index.js",
   "publishConfig": {
     "@jpbnetley:registry":"https://npm.pkg.github.com"
   },
-  "bin": {
-    "testExec": "bin/cliTest.js",
-    "@jpbnetley/test-npx": "npm run testExec"
-},
+  "bin": "bin/cliTest.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "testExec": "test"
