--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,23 +1,37 @@
-name: Node.js Package
+ # This is a basic workflow to help you get started with Actions
+
+name: Publish package to Github
 
 on:
   workflow_dispatch:
-  release:
-    types: [created]
+  push:
+    branches: [main]
+
+concurrency:
+  group: ${{ github.ref }}
 
 jobs:
-  publish-gpr:
+  github-release:
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
-          node-version: 12
-          registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
+          persist-credentials: false
+
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v3
+        id: semantic
+        with:
+          branch: 'main'
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Display new tag version
+        if: steps.semantic.outputs.new_release_published == 'true'
+        run: |
+          echo New release: ${{ steps.semantic.outputs.new_release_version }}
+       
+     
