--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
-  "bin": "bin/cliTest.js",
+  "bin": "bin/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "testExec": "test",
