--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "registry": "https://npm.pkg.github.com"
   },
   "bin": {
-    "@jpbnetley/test-npx": "bin/main.js",
-    "bash:log": "bin/bash/log.sh"
+    "@jpbnetley/test-npx": "src/bin/main.js",
+    "bash:log": "src/bin/bash/log.sh"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
