--- a/package.json
+++ b/package.json
@@ -6,15 +6,12 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
-  "bin": {
-    "@jpbnetley/test-npx": "src/bin/main.js",
-    "bash:log": "src/bin/bash/log.sh"
-  },
+  "bin": "src/bin/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "testExec": "test",
     "nodemon": "nodemon",
-    "start": "npm run nodemon bin/main.js"
+    "start": "npm run nodemon src/bin/index.js"
   },
   "repository": {
     "type": "git",
