--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
-  "bin": "src/bin/index.js",
+  "bin": "src/bin/index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "testExec": "test",
